--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,15 +9,17 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".main.presentation.MainActivity" android:theme="@style/AppTheme">
+        <activity
+            android:name=".main.presentation.MainActivity"
+            android:theme="@style/AppTheme" />
+        <activity android:name=".register.presentation.RegisterActivity" />
+        <activity android:name=".login.presentation.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".register.presentation.RegisterActivity"></activity>
-        <activity android:name=".login.presentation.LoginActivity"></activity>
     </application>
 
 </manifest>
