--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,11 +17,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".main.camera.presentation.AddActivity"
+        <activity
+            android:name=".main.camera.presentation.AddCaptionActivity"
             android:label="@string/photo"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme"
-            />
+            android:theme="@style/AppTheme"/>
+        <activity
+            android:name=".main.camera.presentation.AddActivity"
+            android:label="@string/photo"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme" />
         <activity
             android:name=".main.presentation.MainActivity"
             android:theme="@style/AppTheme" />
